--- a/lab1/package.json
+++ b/lab1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lab2",
+  "name": "lab1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "bootstrap": "^5.3.8",
     "vue": "^3.5.24"
   },
